fixed max-width/navbar spacing

--- a/static/landing/style.css
+++ b/static/landing/style.css
@@ -67,6 +67,8 @@ h3 {
   font-weight: bold;
   position: relative;
   transition: color 0.3s ease;
+  flex: auto;
+  max-width: fit-content;
 }
 
 .navbar a::before {
@@ -278,6 +280,7 @@ form.contact-form textarea {
   margin-bottom: 1.5rem;
   border-radius: 6px;
   font-size: 1rem;
+  max-width: 500px;
 }
 
 
